# yobemag

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  sonar-project.properties
.github/workflows/: build.yml  clang-tidy-review.yml  cmake-build.yml  docs.yml  quality-control.yml  sonarcloud.yml
docs/: Doxyfile.in  cli.rst  conf.py  cpu.rst  index.rst  lcd.rst  log.rst  mmu.rst  rom.rst
roms/: yobemag.gb
src/: attributes.h  cli.c  cli.h  cpu.c  cpu.h  err_codes.c  err_codes.h  errcodes.h  lcd.c  lcd.h  log.c  log.h  logging.c  logging.h  main.c  mmu.c  mmu.h  registers.c  registers.h  rom.c  rom.h
test/: 8bit_lds_test.c  8bit_sub_test.c  CMakeLists.txt  alu_16bit_add_test.c  alu_8bit_adc_test.c  alu_8bit_add_test.c  alu_8bit_and_test.c  alu_8bit_cp_test.c  alu_8bit_dec_test.c  alu_8bit_inc_test.c  alu_8bit_lds_test.c  alu_8bit_or_test.c  alu_8bit_sbc_test.c  alu_8bit_sub_test.c  alu_8bit_xor_test.c  cli_test.c  jp_cc_n.c  jump_tests.c  log_test.c  mmu_test.c  rom_test.c  sample_unit_test.c
test/common/: alu.c  alu.h  util.c  util.h
test/fixtures/: cpu_mmu.c  cpu_mmu.h
